@startuml
'https://plantuml.com/class-diagram

class Solution41 {

}

class StringParser {
    + static sortStringArray(stringArray : ArrayList<String>, count : int) : void
    + static countStringArray(stringArray : ArrayList<String>) : int

}



class FileHandler {
    + arr[] : ArrayList<String>
    + stringCount : int

    + readFile() : void
    + readFileLine() : String
    + printToFile() : void
    + getFileLine(index : int) : String

}

Solution41 o--> StringParser
Solution41 o--> FileHandler


@enduml